apps/websites/goreportcard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goreportcard
  labels:
    app: goreportcard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: goreportcard
  template:
    metadata:
      labels:
        app: goreportcard
    spec:
      containers:
        - name: goreportcard
          image: goreportcard/goreportcard:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
