apps/websites/goreportcard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goreportcard
  labels:
    app: goreportcard
spec:
  selector:
    app: goreportcard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
